# base64-cpp

./: CMakeLists.txt  README.md
cmake/: ThirdParties.cmake
include/base64-cpp/: decode.hpp
include/base64-cpp/detail/: cpu.hpp  decode-avx512.hpp  decode-common.hpp  decode-simple.hpp  decode-sse.hpp
test/: test-base64-decoding.cpp  test-main.cpp
